--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Cabello", "Camila", "Coldplay", "Sheeran"]
+  "cSpell.words": ["Cabello", "Camila", "Coldplay", "Sheeran"],
+  "liveServer.settings.port": 5501
 }
