--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Cabello", "Camila", "Coldplay", "Sheeran"],
+  "cSpell.words": ["Cabello", "Camila", "Coldplay", "Sheeran", "Trainor"],
   "liveServer.settings.port": 5501
 }
