--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
-  "cSpell.words": ["Cabello", "Camila", "Coldplay", "Sheeran", "Trainor"],
+  "cSpell.words": [
+    "Cabello",
+    "Camila",
+    "Coldplay",
+    "Eilish",
+    "Marshmello",
+    "Sheeran",
+    "Timbaland",
+    "Trainor"
+  ],
   "liveServer.settings.port": 5501
 }
